Fix some spacing issues

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ li > a:link {
     display: grid;
     grid-template-columns: 2fr 3fr 4fr 2fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 8px;
+    row-gap: 8px;
 }
 
 .resume-dates {
@@ -151,7 +151,7 @@ li > a:link {
 }
 
 .section-content {
-    grid-column: 3 / 4;
+    grid-column: 3 / 5;
 }
 
 #section-content-1 {
